--- a/serverless.yml
+++ b/serverless.yml
@@ -12,24 +12,20 @@ provider:
   stage: ${opt:stage, "offline"}
   region: ${opt:region, "ap-northeast-1"}
   runtime: nodejs18.x
-  endpointType: private
-  versionFunctions: false
+  # 作成済のIAMロールを指定する場合は定義。未定義だと自動作成してくれる。
   # iam:
-  s3:
-    helloBucket:
-      name: serverless-ts-learning-bucket2
-      LifecycleConfiguration:
-        Rules:
-          - Id: Folder1
-            Prefix: folder1/
-            Status: Enabled
-            ExpirationInDays: 7
-          - Id: Folder2
-            Prefix: folder2/
-            Status: Enabled
-            ExpirationInDays: 7
+  #   role:
+  endpointType: private
+  # Private APIGWなので、接続元となるVPCEndpointをここに定義
+  vpcEndpointIds:
+    - vpce-0a1a040721b333ab6
+  versionFunctions: false
+  # Lambdaに紐づくAPIGWを自動生成してくれる
+  apiGateway:
+    resourcePolicy: ${file(serverless-config/helloApiGwResourcePolicy.yml)}
 
 custom:
+  conf: ${file(serverless-config/env.dev.yml)}
   s3:
     host: localhost
     port: 4569
@@ -37,12 +33,63 @@ custom:
     bucketName: serverless-ts-learning-bucket2
 
 functions:
-  hello:
-    handler: src/functions/hello.default
+  # helloByS3Event:
+  #   handler: src/functions/helloByS3Event.default
+  #   events:
+  #     - s3:
+  #         bucket: helloBucket
+  #         event: s3:ObjectCreated:*
+  #         rules:
+  #           - prefix: folder1/
+  #           - suffix: .csv
+  helloByAPIGWEvent:
+    handler: src/functions/helloByAPIGWEvent.default
     events:
-      - s3:
-          bucket: helloBucket
-          event: s3:ObjectCreated:*
-          rules:
-            - prefix: folder1/
-            - suffix: .csv
+      - http:
+          path: hello
+          method: get
+# functionsに紐づくAPIGWは、provider.apiGatewayを定義すれば
+# 自動でAPIGW作ってくれる。
+
+# resources:
+#   Resources:
+#     # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-apigateway-restapi.html
+#     HelloAPI:
+#       # MethodType[HTTP/REST]
+#       Type: AWS::ApiGateway::RestApi
+#       Properties:
+#         Name: ${self.service}-${sls:stage}-hello
+#         EndpointConfiguration:
+#           # EndpointType[Public/Private]
+#           Types:
+#             - PRIVATE
+#           # ここで指定したVPCエンドポイントIDと、APIGWのIDを使って下記のようなDNSレコードが自動的に定義される。
+#           # https://{rest-api-id}-{vpce-id}.execute-api.{region}.amazonaws.com
+#           VpcEndpointIds:
+#             - vpce-0a1a040721b333ab6
+#           Policy: ${file(serverless-config/helloApiGwResoucePolicy.json)}
+#     # Resource [hello] -> これに対してMethod(GET/POST/PUT/DELETE)を追加していく。
+#     # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-apigateway-resource.html
+#     HelloResource:
+#       Type: AWS::ApiGateway::Resource
+#       Properties:
+#         RestApiId: !Ref HelloAPI
+#         ParentId: !GetAtt
+#           - HelloAPI
+#           - RootResourceId
+#         PathPart: "{proxy+}"
+
+#     # Method -> Resource配下に生やしていく。
+#     # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-apigateway-method.html
+#     HelloMethod:
+#       Type: AWS::ApiGateway:Method
+#       Properties:
+#         RestApiId: !Ref HelloAPI
+#         ResourceId: !GetAtt
+#           - HelloAPI
+#           - RootResourceId
+#         HttpMethod: GET
+#         AuthorizationType: NONE
+#         Integration:
+#           Type: AWS_PROXY
+#           IntegrationHttpMethod: GET
