--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,12 @@ custom:
     bucketName: serverless-ts-learning-bucket2
 
 functions:
+  auth:
+    handler: src/functions/authorizer/authHandler.default
+    events:
+      - http:
+          path: auth
+          method: get
   # helloByS3Event:
   #   handler: src/functions/helloByS3Event.default
   #   events:
@@ -43,7 +49,7 @@ functions:
   #           - prefix: folder1/
   #           - suffix: .csv
   helloByAPIGWEvent:
-    handler: src/functions/helloByAPIGWEvent.default
+    handler: src/functions/hello/helloByAPIGWEvent.default
     events:
       - http:
           path: hello
